[package]
name = "glance-widget-bluesky"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = "0.4.39"
humantime = "2.1.0"
html-escape = "0.2"
